--- a/pages/services-catalog.html
+++ b/pages/services-catalog.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/styles.css">
+    <!-- Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <!-- Font Awesome icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
@@ -12,9 +16,39 @@
     <header class="m-2 ">
         <div class="container-lg  justify-content-between d-flex align-items-center">
             <h1 class="">Titulo</h1>
-            <div class="">carrito</div>
+            <div class=""><button type="button" class="btn btn-warning btn-lg px-60"><i class="bi bi-cart-fill"></i></button></div>
         </div>
     </header>
+   
+<!-- Modal -->
+     <section class="modalc3">
+        <div class="calculo">
+           <h2>Calculos</h2>
+           <button type="button" class="btn btn-warning">Cerrar</button>
+        </div>
+     </section>
+
+         <section class="modalc2">
+        <div class="calculo">
+           <h2>Calculos</h2>
+           <button type="button" class="btn btn-primary">Cerrar</button>
+        </div>
+     </section>
+
+    <section class="modalc">
+        <div class="calculo">
+           <h2>Calculos</h2>
+           <button type="button" class="btn btn-success">Cerrar</button>
+        </div>
+     </section>
+
+ <section class="modal">
+    <div class="carrito">
+        <h2>Carrito de Compras</h2>
+        <div class="close"><i class="bi bi-x-circle-fill"></i></div>      
+    </div>
+ </section>
+<!--fin del modal -->    
 
     <div class="container-lg">
         <div class="">
@@ -190,7 +224,7 @@
                         <div class="fw-bold">primer item</div>
                         Cras justo odio
                     </div>
-                    <button class="btn btn-sm bg-primary rounded">ver calculos</button>    
+                    <button class="btn btn-sm bg-primary rounded c">ver calculos</button>    
                     </li>
 
                     <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -198,7 +232,7 @@
                         <div class="fw-bold">segundo item</div>
                         Cras justo odio
                     </div>
-                    <button class="btn btn-sm bg-primary rounded">ver calculos</button>    
+                    <button class="btn btn-sm bg-primary rounded c2">ver calculos</button>    
                     </li>
 
                     <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -206,10 +240,10 @@
                         <div class="fw-bold">tercer item</div>
                         Cras justo odio
                     </div>
-                    <button class="btn btn-sm bg-primary rounded">ver calculos</button>    
+                    <button class="btn btn-sm bg-primary rounded c3">ver calculos</button>    
                     </li>
                     <li class="border-0 my-3 d-flex justify-content-end align-items-center">
-                    <button class="btn btn-sm  bg-success rounded">ver items en carrito</button>    
+                    <button class="btn btn-sm  bg-success rounded text-center py-2 px-2">ver items en carrito</button>    
                     </li>
                 </ol>
 
@@ -219,7 +253,8 @@
         
 
     </div>
-
     
+
+<script src="/assets/service.js"></script>
 </body>
 </html>
